# DDF

./: README.md  dataloader.py  function.py  main.py  model.py  model_vgg.py
data/: aug.py
data/BSDS/: img_train_pair_flipped.txt
eval/edges-eva/: EV_BIPED.m  data_processin.m  edgesDemo.m  edgesEval.m  edgesEvalDir.m  edgesEvalImg.m  edgesEvalImg_x.m  edgesEvalPlot.m  edgesEvalPlot_x.m  edgesTrain.m  h5_reader.m  my_sobel.m  norm_image.m
eval/edges-eva/BoundaryDetection/: README.md
eval/edges-eva/BoundaryDetection/data/results/CID/sed/: eval_bdry.txt  eval_bdry_img.txt  eval_bdry_thr.txt
eval/edges-eva/BoundaryDetection/data/results/MBDD/colour/sed/: eval_bdry_boundaries.txt  eval_bdry_edges.txt  eval_bdry_img_boundaries.txt  eval_bdry_img_edges.txt  eval_bdry_thr_boundaries.txt  eval_bdry_thr_edges.txt
eval/edges-eva/BoundaryDetection/data/results/MBDD/grey/sed/: eval_bdry_boundaries.txt  (+5 more)
eval/edges-eva/BoundaryDetection/src/cpp/: CMakeLists.txt  README.txt  gaussian.cpp  gaussian.h  sed.cpp  utils.cpp  utils.h
eval/edges-eva/BoundaryDetection/src/matlab/: CalculateGaussianWidth.m  CentreCircularZero.m  CentreZero.m  CircularAverage.m  CircularLocalStdContrast.m  Gaussian2Gradient1.m  GaussianFilter2.m  NormaliseChannel.m  README.txt  SEDDemo.m  SurroundModulationEdgeDetector.m  nonmax.m
eval/edges-eva/msi_hed/: edgesEvalDir_x.m  edgesEval_x.m  getPrmDflt_x.m  nonMaxSupr_x.m
eval/edges-eva/results/biped_dxn/values/: RGB_008_ev1.txt
eval/edges-eva/results/biped_dxn/values-eval/: eval_bdry.txt
eval/edges-eva/toolbox/matlab/: fevalDistr.m
(+36 files in other folders)
